Rename product naar student
Amai ik ben precies goe wakker haha

--- a/views/lijst.ejs
+++ b/views/lijst.ejs
@@ -9,6 +9,8 @@
     <ul>
         <% students.forEach(function(student){ %>
         <li><span><b>Naam: </b><%= student.naam %></span></li>
+        <li><span><b>Geboortedatum: </b><%= student.geboortedatum.toLocaleDateString() %></span></li>
+        <li><span><b>Studierichting: </b><%= student.studierichting %></span></li>
         <% }) %>
     </ul>
 </body>
